<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateRequestVaccine">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RequestVaccine">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="183dp"
            android:layout_height="92dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="93dp"
            app:layout_constraintEnd_toStartOf="@+id/UpdateListing"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mobilelogo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="126dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="127dp"
            android:text="@string/UpdateVaccine"
            android:textColor="@color/purple_500"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/txtAmountup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="170dp"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="152dp"
            android:layout_height="18dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="296dp"
            android:text="@string/RequestDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="297dp"
            android:text="@string/VaccineType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRequestDateUp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="297dp"
            android:text="@string/VaccineAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRequestTypeup" />

        <Button
            android:id="@+id/btn_RequestVaccineUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="203dp"
            android:text="@string/UpdateVaccineBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmountup"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="38dp"
            android:layout_height="43dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <ImageView
            android:id="@+id/UpdateListing"
            android:layout_width="44dp"
            android:layout_height="43dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_list_alt_24" />

        <TextView
            android:id="@+id/txtRequestDateUp"
            android:layout_width="151dp"
            android:layout_height="32dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="229dp"
            android:text="TextView"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/txtRequestTypeup"
            android:layout_width="151dp"
            android:layout_height="32dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="229dp"
            android:text="TextView"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>